--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -11,8 +11,8 @@
         <header>
             <a href="#" class="logo">&#169;</a>
             <ul>
-                <li><a href="./tweets.html">Tweets</a></li>
-            </ul>
+		<li><a href="./tweets.html">Tweets</a></li>
+                </ul>
         </header>
         <main>
             <article>
@@ -30,8 +30,7 @@
                 <p>Some text-based Attributes are defined within the opening tag, after an element’s name. Generally attributes include a name and a value em.</p>
             </aside>
         </main>
-        <footer><p>Learning HTML is indeed fun and amazing. Made by Nkah Chambeline Dzengong - <a href="https://drive.google.com/drive/folders/1hH0JQZaBkGmZd_IzfwsIZTEv7qF3PaxN?usp=share_link" target="_blank">here</a></p></footer>
+        <footer><p>Every expert was once a beginner, so consistency is the key. Made by Amani Coulibaly - <a href="httpC:\Users\Hp\OneDrive\Pictures\Camera Roll\Annotation 2022-05-19 054541.png">photo</a></p></footer>
     </body>
-</html>
-																				               
+</html>																               
 																																										               
