--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="utf-8">
-		<meta lang="en">
-		<title>HTML ADVANCED</title>
+	      <meta charset="utf-8">
+	      <meta lang="en">
+    	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    	<link rel="stylesheet" href="styles.css">
+		<title>SMILE</title>
 	</head>
 
 	<body>
